--- a/apartmani-danijel/css/style.css
+++ b/apartmani-danijel/css/style.css
@@ -161,3 +161,57 @@ header span {
   border: solid 1px #354649;
   background-color: transparent;
 }
+
+/* form style */
+.formSection {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #a3c6c4;
+  padding: 20px 0;
+  width: 100%;
+}
+
+.form {
+  width: 500px;
+  height: 100%;
+}
+
+.comm {
+  width: 300px;
+  height: 50px;
+  background-color: #e0e7e9;
+  border: none;
+}
+
+.fName,
+.lName,
+.eMail,
+.phoneNumber {
+  width: 250px;
+  background-color: #e0e7e9;
+  border: none;
+}
+
+.submit {
+  border: none;
+  padding: 5px 10px;
+  margin: 10px 0;
+  color: #6c7a89;
+  text-transform: uppercase;
+}
+
+.submit:hover {
+  background-color: #a3c6c4;
+  color: #e0e7e9;
+  transition: 0.3s;
+  border: 1px solid #e0e7e9;
+}
+
+/* footer style */
+footer {
+  background-color: #e0e7e9;
+  text-align: center;
+  padding: 10px 0;
+  font-size: 1.2rem;
+}
