--- a/infiniti-web/css/header.css
+++ b/infiniti-web/css/header.css
@@ -27,7 +27,7 @@
 
 .navigation ul {
   display: flex;
-  gap: 2.5rem;
+  gap: 18.5rem;
   list-style: none;
   margin-top: 2rem;
 }
@@ -51,7 +51,8 @@
   font-family: var(--font-family-inter);
   font-weight: 600;
   font-size: 1.8rem;
-  padding: 0.2rem 0.4rem;
+  padding: 1.2rem 3rem;
+  border-radius: 50%;
 }
 
 /* main heading */
@@ -82,5 +83,5 @@
   background-color: #00a75d;
   padding: 1rem 1.5rem;
   border-radius: 50%;
-  border: 1px solid var(--main-bg-color);
+  border: 0.5rem solid var(--main-bg-color);
 }
