--- a/infiniti-web/css/aside.css
+++ b/infiniti-web/css/aside.css
@@ -1,1 +1,76 @@
 @import url(/css/style.css);
+
+header {
+  margin-bottom: 10rem;
+}
+.asideSection {
+  width: 1213px;
+  height: auto;
+}
+
+/* box 1 */
+.box1 {
+  display: flex;
+  gap: 5rem;
+  margin-bottom: 20rem;
+}
+
+.textBox1 {
+  display: flex;
+  flex-direction: column;
+  text-align: justify;
+  justify-content: center;
+  gap: 2rem;
+}
+
+.textBox1 h1 {
+  font-family: var(--font-family-avenir);
+  font-size: 5rem;
+  font-weight: 800;
+  color: var(--main-heading-color);
+}
+
+.textBox1 p {
+  font-family: var(--font-family-inter);
+  font-size: 2.8rem;
+  font-weight: 900;
+  text-align: justify;
+  line-height: 1.5;
+  color: var(--secondary-bg-color);
+}
+
+/* box 2 */
+.box2 {
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  gap: 5rem;
+}
+
+.imgBox1 {
+  width: 480px;
+  height: 439px;
+}
+
+.textBox2 {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  align-items: flex-end;
+}
+
+.textBox2 h1 {
+  font-size: 5.6rem;
+  color: var(--secondary-bg-color);
+  font-weight: 800;
+  font-family: var(--font-family-avenir);
+}
+
+.textBox2 p {
+  font-family: var(--font-family-avenir);
+  font-size: 2.8rem;
+  font-weight: 900;
+  line-height: 1.5;
+  color: var(--secondary-bg-color);
+  text-align: justify;
+}
