--- a/infiniti-web/css/aside.css
+++ b/infiniti-web/css/aside.css
@@ -2,6 +2,7 @@
 
 header {
   margin-bottom: 10rem;
+  margin-bottom: 2rem;
 }
 .asideSection {
   width: 1213px;
@@ -20,10 +21,10 @@ header {
   flex-direction: column;
   text-align: justify;
   justify-content: center;
-  gap: 2rem;
+  gap: 3rem;
 }
 
-.textBox1 h1 {
+.textBox1 h2 {
   font-family: var(--font-family-avenir);
   font-size: 5rem;
   font-weight: 800;
@@ -55,11 +56,11 @@ header {
 .textBox2 {
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 3rem;
   align-items: flex-end;
 }
 
-.textBox2 h1 {
+.textBox2 h2 {
   font-size: 5.6rem;
   color: var(--secondary-bg-color);
   font-weight: 800;
