--- a/Caffee bar boss prices /css/index.css
+++ b/Caffee bar boss prices /css/index.css
@@ -5,18 +5,17 @@
 }
 
 html {
+  color: #fff;
+  font-weight: 600;
   font-size: 10px;
-  font-family: sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 main {
   width: 100%;
   height: auto;
-  background-image: linear-gradient(
-      rgba(0, 0, 255, 0.8),
-      rgba(255, 165, 0, 0.4)
-    ),
-    url(/css/main-bg.png);
+  background-image: linear-gradient(#333, #3333332c),
+    url(/css/secondary-bg.webp);
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -79,7 +78,7 @@ main {
 .thead {
   font-size: 2rem;
   text-transform: uppercase;
-  color: #8a1c1c;
+  color: #fff;
 }
 
 .tbody {
@@ -87,7 +86,9 @@ main {
 }
 
 .drinksName {
-  color: #8a1c1c;
+  /* color: #fff; */
+  color: #ffd700;
+
   font-size: 2.2rem;
   text-transform: uppercase;
   font-style: italic;
