--- a/apartmani-danijel/css/style.css
+++ b/apartmani-danijel/css/style.css
@@ -1,217 +1,57 @@
-/* 
-colors-
-        #354649 borders and another style
-        #6C7A89 color of h and a tags
-        #A3C6C4 secondary background color
-        #E0E7E9 background color
-*/
 * {
   padding: 0;
   margin: 0;
-  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
-html {
-  font-size: 62.5%;
-  font-family: "Inter", sans-serif;
-  color: #333;
-}
-
-.nameOfApartmans h1 {
-  font-size: 5rem;
-  text-transform: uppercase;
-  font-style: italic;
-  margin-left: 20px;
-  color: #6c7a89;
-}
-
-/* header */
-.mainHeader {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #e0e7e9;
-}
-
-header span {
-  color: #6c7a89;
-}
-
-.logo {
-  margin: 10px 200px;
-  font-size: 2rem;
-  text-transform: uppercase;
-  /* text-decoration: underline; */
-}
-
-.mainNav {
-  margin: 10px 200px;
-}
-
-.mainNav a {
-  padding: 3px 6px;
-  color: #6c7a89;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 1.2rem;
-}
-
-.mainNav a:hover {
-  transition: 0.5s;
-  background-color: #6c7a89;
-  color: #e0e7e9;
-  border: 1px solid #354649;
-}
-
-/* hero section */
-.hero {
-  display: flex;
-  justify-content: center;
+.contactform {
+  width: 50vw;
+  margin: 0 auto 2rem auto;
   padding: 1rem;
-  gap: 2rem;
-  background-color: #a3c6c4;
 }
 
-.premantura {
-  background-image: linear-gradient(to left, #a3c6c440, #a3c6c47f),
-    url(./premanturaHeroSection.jpeg);
-  background-size: cover;
-  width: 600px;
-  height: 400px;
+@media only screen and (max-width: 1255px) {
+  .aboutSection {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
-.premanturaTextBox {
-  max-width: 400px;
-  font-size: 1.8rem;
-  line-height: 1.5;
+@media only screen and (max-width: 1095px) {
+  .cardsApartman {
+    flex-direction: column;
+  }
 }
 
-.contentOffer a {
-  padding: 3px 6px;
-  color: #6c7a89;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 4.2rem;
+@media only screen and (max-width: 820px) {
+  .contactform {
+    width: 100vw;
+  }
 }
 
-.contentOffer a:hover {
-  transition: 0.5s;
-  background-color: #6c7a89;
-  color: #e0e7e9;
-  border: 1px solid #354649;
+@media only screen and (max-width: 640px) {
+  .mapAddress {
+    width: 520px;
+    height: auto;
+  }
+
+  .contactform {
+    width: 100vw;
+  }
+
+  .aboutContent {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
-/* apartman card style */
-.apartmanCard {
-  background-color: #e0e7e9;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.8rem;
-}
+@media only screen and (max-width: 480px) {
+  .mapAddress {
+    width: 300px;
+    height: auto;
+  }
 
-.apartmanNumber {
-  font-size: 2rem;
-  margin: 20px 0;
-  text-transform: uppercase;
-  color: #6c7a89;
-}
-
-.apartmanFree {
-  text-align: start;
-  margin: 0 20px;
-  /* text-transform: uppercase; */
-  font-size: 1.7rem;
-}
-
-.freeItem {
-  color: #354649;
-  font-size: 2rem;
-  margin-right: 10px;
-}
-
-.card {
-  margin: 40px 70px;
-  /* padding: 10px; */
-  text-align: center;
-  line-height: 1.5;
-  box-shadow: 10px 2px 10px 2px rgba(0, 0, 0, 0.1);
-}
-
-.apartmanImg {
-  width: 350px;
-  height: 100%;
-}
-
-.btn a {
-  display: inline-block;
-  padding: 5px 10px;
-  margin: 20px 0;
-  background-color: #a3c6c4;
-  color: #354649;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-style: italic;
-  font-weight: bold;
-  font-size: 2rem;
-}
-
-.btn a:hover {
-  transition: 0.3s;
-  border: solid 1px #354649;
-  background-color: transparent;
-}
-
-/* form style */
-.formSection {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background-color: #a3c6c4;
-  padding: 20px 0;
-  width: 100%;
-}
-
-.form {
-  width: 500px;
-  height: 100%;
-}
-
-.comm {
-  width: 300px;
-  height: 50px;
-  background-color: #e0e7e9;
-  border: none;
-}
-
-.fName,
-.lName,
-.eMail,
-.phoneNumber {
-  width: 250px;
-  background-color: #e0e7e9;
-  border: none;
-}
-
-.submit {
-  border: none;
-  padding: 5px 10px;
-  margin: 10px 0;
-  color: #6c7a89;
-  text-transform: uppercase;
-}
-
-.submit:hover {
-  background-color: #a3c6c4;
-  color: #e0e7e9;
-  transition: 0.3s;
-  border: 1px solid #e0e7e9;
-}
-
-/* footer style */
-footer {
-  background-color: #e0e7e9;
-  text-align: center;
-  padding: 10px 0;
-  font-size: 1.2rem;
+  .contactform {
+    width: 100vw;
+  }
 }
