updating section and icons, fix responsive

--- a/my-new-portofolio/css/general.css
+++ b/my-new-portofolio/css/general.css
@@ -2,7 +2,7 @@
 @import url(header.css);
 @import url(heroSection.css);
 @import url(myProjectSection.css);
-@import url(testimoialsSection.css);
+@import url(chouseMeSection.css);
 @import url(technologiSection.css);
 @import url(pricingSection.css);
 @import url(footer.css);
