--- a/my-new-portofolio/css/mediaQuery.css
+++ b/my-new-portofolio/css/mediaQuery.css
@@ -3,11 +3,32 @@
     width: 250px;
     height: auto;
   }
+
+  .footer {
+    text-align: center;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+  }
 }
 
 @media only screen and (max-width: 640px) {
   .chouseMeSection_icons_respColumn {
     flex-direction: column;
+  }
+
+  .footer {
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .socialmeida {
+    flex-direction: column;
+  }
+
+  .mediaSpan {
+    text-align: center;
   }
 }
 
@@ -20,5 +41,11 @@
   }
   .testimonialsSection_profile_imgs {
     width: 150px;
+  }
+
+  .footer {
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
   }
 }
