working on responsive

--- a/my-new-portofolio/css/mediaQuery.css
+++ b/my-new-portofolio/css/mediaQuery.css
@@ -1,3 +1,17 @@
+@media only screen and (max-width: 1225px) {
+  .pricingCard {
+    height: 50rem;
+  }
+}
+
+@media only screen and (max-width: 995px) {
+  .pricingCards_row {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
 @media only screen and (max-width: 769px) {
   .profileImg {
     width: 250px;
@@ -9,6 +23,10 @@
     align-items: center;
     flex-direction: column;
     justify-content: center;
+  }
+
+  .contactMe_btn {
+    margin-bottom: 5rem;
   }
 }
 
@@ -30,6 +48,10 @@
   .mediaSpan {
     text-align: center;
   }
+
+  .contactMe_btn {
+    margin-bottom: 5rem;
+  }
 }
 
 @media only screen and (max-width: 460px) {
@@ -47,5 +69,9 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
+  }
+
+  .contactMe_btn {
+    margin-bottom: 5rem;
   }
 }
