--- a/my-new-portofolio/css/mediaQuery.css
+++ b/my-new-portofolio/css/mediaQuery.css
@@ -12,6 +12,15 @@
   }
 }
 
+@media only screen and (max-width: 820px) {
+  .footer {
+    text-align: center;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+  }
+}
+
 @media only screen and (max-width: 769px) {
   .profileImg {
     width: 250px;
@@ -55,16 +64,6 @@
 }
 
 @media only screen and (max-width: 460px) {
-  .testimonialsSection_profile_1 {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-  }
-  .testimonialsSection_profile_imgs {
-    width: 150px;
-  }
-
   .footer {
     justify-content: center;
     flex-direction: column;
@@ -72,6 +71,16 @@
   }
 
   .contactMe_btn {
+    margin-bottom: 5rem;
+  }
+}
+
+@media only screen and (max-width: 420px) {
+  .heroSection {
+    height: auto;
+  }
+
+  .hero .contactMe_btn {
     margin-bottom: 5rem;
   }
 }
