--- a/my-new-portofolio/css/mediaQuery.css
+++ b/my-new-portofolio/css/mediaQuery.css
@@ -10,14 +10,9 @@
     justify-content: center;
     align-items: center;
   }
-}
 
-@media only screen and (max-width: 820px) {
-  .footer {
-    text-align: center;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
+  .pricingCard {
+    height: auto;
   }
 }
 
@@ -27,13 +22,6 @@
     height: auto;
   }
 
-  .footer {
-    text-align: center;
-    align-items: center;
-    flex-direction: column;
-    justify-content: center;
-  }
-
   .contactMe_btn {
     margin-bottom: 5rem;
   }
@@ -41,16 +29,6 @@
 
 @media only screen and (max-width: 640px) {
   .chouseMeSection_icons_respColumn {
-    flex-direction: column;
-  }
-
-  .footer {
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-
-  .socialmeida {
     flex-direction: column;
   }
 
@@ -64,14 +42,8 @@
 }
 
 @media only screen and (max-width: 460px) {
-  .footer {
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .contactMe_btn {
-    margin-bottom: 5rem;
+  .pricingCard {
+    height: auto;
   }
 }
 
@@ -82,5 +54,9 @@
 
   .hero .contactMe_btn {
     margin-bottom: 5rem;
+  }
+
+  .pricingCard {
+    height: auto;
   }
 }
