--- a/my-new-portofolio/css/general.css
+++ b/my-new-portofolio/css/general.css
@@ -7,6 +7,7 @@
 @import url(pricingSection.css);
 @import url(footer.css);
 @import url(mediaQuery.css);
+@import url(aboutMe.css);
 /* import css */
 
 * {
