add a scroll btn from bottom to top of site

--- a/my-new-portofolio/css/mediaQuery.css
+++ b/my-new-portofolio/css/mediaQuery.css
@@ -49,6 +49,10 @@
   .pricingCard {
     height: auto;
   }
+
+  .scrollBtn {
+    bottom: -3rem;
+  }
 }
 
 @media only screen and (max-width: 420px) {
