--- a/my-new-portofolio/css/footer.css
+++ b/my-new-portofolio/css/footer.css
@@ -2,3 +2,17 @@
   color: rgb(69, 165, 4);
   font-size: 1.5rem;
 }
+
+.mainContent {
+  position: relative;
+}
+
+.scrollBtn {
+  position: absolute;
+  bottom: 0;
+  right: 5rem;
+  color: rgb(69, 165, 4);
+  font-size: 3rem;
+  cursor: pointer;
+  border: 0.01rem solid rgb(69, 165, 4);
+}
