ficing sections and responsive

--- a/my-new-portofolio/css/myProjectSection.css
+++ b/my-new-portofolio/css/myProjectSection.css
@@ -1,9 +1,9 @@
 .myProjects {
-  margin-bottom: 10rem;
+  margin-bottom: 20rem;
 }
 
 .myProjectsSection_heading {
-  margin-bottom: 6rem;
+  margin-bottom: 10rem;
 }
 
 .mediaIcon {
@@ -17,6 +17,6 @@
   opacity: 50%;
 }
 
-.mediaSpan {
-  margin-top: 5rem;
+.socialmeida {
+  margin-top: 10rem;
 }
