--- a/my-new-portofolio/css/pricingSection.css
+++ b/my-new-portofolio/css/pricingSection.css
@@ -1,6 +1,10 @@
 .pricingSection {
-  margin-bottom: 5rem;
+  margin-bottom: 20rem;
   height: auto;
+}
+
+.priingHeading {
+  margin-bottom: 10rem;
 }
 
 .pricingCard {
