--- a/my-new-portofolio/css/mediaQuery.css
+++ b/my-new-portofolio/css/mediaQuery.css
@@ -71,6 +71,10 @@
   .pricingCard {
     padding: 5rem 1rem;
   }
+
+  .header {
+    margin-bottom: 5rem;
+  }
 }
 
 @media only screen and (max-width: 640px) {
@@ -97,6 +101,10 @@
   .pricingCard {
     padding: 5rem 1rem;
   }
+
+  .header {
+    margin-bottom: 5rem;
+  }
 }
 
 @media only screen and (max-width: 570px) {
@@ -110,6 +118,10 @@
 
   .pricingCard {
     padding: 5rem 1rem;
+  }
+
+  .header {
+    margin-bottom: 5rem;
   }
 }
 
@@ -132,6 +144,10 @@
 
   .slider_arow__left {
     margin-left: 0;
+  }
+
+  .header {
+    margin-bottom: 5rem;
   }
 }
 
@@ -162,5 +178,9 @@
 
   .pricingCard {
     padding: 5rem 1rem;
+  }
+
+  .header {
+    margin-bottom: 5rem;
   }
 }
